--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   json_schema: ^5.1.3
   logging: ^1.2.0
+  petitparser: ^6.0.2
 
 dev_dependencies:
   all_lint_rules_community: ^0.0.43
