--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,12 @@ description: Progressive JSON repair + schema defaults for streaming LLM output.
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ^3.7.0
 
 dependencies:
   json_schema: ^5.1.3
   logging: ^1.2.0
-  petitparser: ^6.0.2
+  petitparser: ^7.0.0
 
 dev_dependencies:
   all_lint_rules_community: ^0.0.43
